pc - test coverage now 100%